--- a/css/critical-home.css
+++ b/css/critical-home.css
@@ -6,6 +6,7 @@
   grid-template-columns: 1fr min(70rem, 100%) 1fr;
   grid-template-rows: auto 2.352637rem auto 4.705274rem;
   background: #ededed;
+  margin-bottom: 2.352637rem;
 }
 .intro > * {
   grid-column: 2;
@@ -18,7 +19,7 @@
 .intro__title {
   justify-self: start;
   min-width: 60%;
-  padding: 1.7689rem 1.7689rem;
+  padding: 2.352637rem 2.352637rem;
   display: flex;
   align-items: center;
   font-weight: 700;
@@ -43,7 +44,7 @@
   justify-self: end;
   min-width: 60%;
   text-align: right;
-  padding: 3.12900721rem 1.7689rem;
+  padding: 3.12900721rem 2.352637rem;
   font-size: 2.352637rem;
   font-weight: 600;
 }
@@ -57,4 +58,31 @@
   justify-content: center;
   align-items: center;
   margin-bottom: -4.705274rem;
+}
+
+.home-invite {
+  padding: 2.352637rem;
+}
+
+.home-features {
+  background-color: #85B916;
+}
+.home-features__inner {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 0 0 auto;
+  justify-content: space-between;
+}
+.home-features__item {
+  margin: 2.352637rem;
+  width: 20em;
+}
+.home-features__item h3 {
+  text-align: center;
+  margin-bottom: 1.33rem;
+}
+.home-features__item__content {
+  background-color: #fafafa;
+  padding: 2.352637rem;
+  box-shadow: 5px 5px 0 #3d3838;
 }
