--- a/css/critical-page.css
+++ b/css/critical-page.css
@@ -20,6 +20,7 @@
 
 .page-content {
   line-height: 1.3;
+  padding-bottom: 2.352637rem;
 }
 .page-content > * {
   max-width: 65ch;
@@ -76,12 +77,17 @@
 
 .toc {
   line-height: 1.1;
+  margin: 2.352637rem 0;
 }
 .toc * {
   font-size: 1.33rem;
 }
 .toc h2 {
   font-variant: small-caps;
+  margin-top: 1.33rem;
+}
+.toc a {
+  text-decoration: none;
 }
 .toc button {
   all: inherit;
