--- a/css/critical.css
+++ b/css/critical.css
@@ -88,7 +88,7 @@ select {
 }
 
 body {
-  background: #ffffff;
+  background: #fafafa;
   color: #3d3838;
   font-size: 1.33rem;
   min-height: 100vh;
@@ -100,8 +100,17 @@ body > * {
   width: 100%;
 }
 
+a:not([class]) {
+  color: currentColor;
+  text-decoration-color: #85B916;
+}
+
+a:not([class]):hover {
+  box-shadow: 0 5px 0 #85B916;
+}
+
 :focus {
-  outline: 4px solid red;
+  outline: 4px solid #85B916;
   outline-offset: 0.25rem;
 }
 
@@ -116,14 +125,18 @@ h1, h2, h3, h4, h5, h6 {
 .button {
   display: inline-block;
   padding: 0.5rem 1.5rem;
-  background: red;
-  color: blue;
-  border: 2px solid;
+  background: #85B916;
+  color: #3d3838;
+  box-shadow: 5px 5px 0 #3d3838;
   text-transform: uppercase;
   text-decoration: none;
   text-align: center;
   font-weight: 900;
 }
+.button:hover {
+  box-shadow: 0 0 0 5px #3d3838;
+}
+
 .footer-nav {
   text-align: center;
 }
@@ -147,7 +160,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .site-footer {
   margin-top: auto;
-  background: red;
+  border-top: 5px solid #85B916;
   padding: 2.352637rem 0;
   font-size: 1rem;
 }
@@ -204,7 +217,7 @@ h1, h2, h3, h4, h5, h6 {
   top: 100%;
   left: 0;
   margin-top: 0.25rem;
-  background: red;
+  background: #85B916;
 }
 
 .skip-link {
@@ -221,7 +234,7 @@ h1, h2, h3, h4, h5, h6 {
  * RADIUS
  * Applies rounded corners on borders
  */
-.radius, .button {
+.radius {
   border-radius: 0.25rem;
 }
 
